Retire une marge inutile

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -920,6 +920,9 @@
             border-color: #999;
         }
     }
+    .authors .member-item {
+        margin-right: 0;
+    }
 
     .open-zen-mode {
         display: none;
