--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -47,19 +47,18 @@
 
 
 {% block sidebar %}
-    <aside class="sidebar accordeon mobile-menu-bloc mobile-menu-hide"
+    <aside class="sidebar accordeon mobile-menu-bloc"
            data-title="Catégories de tutoriels"
     >
         <h3>Catégories <span class="wide">de tutoriels</span></h3>
 
         {% with categories='.'|top_categories_tuto %}
             {% for category in categories %}
-                {# FIXME: il manque un lien ici #}
-                <h4><a href="#" class="mobile-menu-link">{{ category.title }}</a></h4>
+                <h4 class="mobile-menu-link">{{ category.title }}</h4>
                 <ul>
                     {% for catofsubcat in category.get_subcategories %}
                         <li>
-                            <a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}">
+                            <a href="{{ catofsubcat.subcategory.get_absolute_url_tutorial }}" class="mobile-menu-link mobile-menu-sublink">
                                 {{ catofsubcat.subcategory }}
                             </a>
                         </li>
