Ajuste les tableaux

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -1753,6 +1753,10 @@ table {
         &:first-child {
             border-left: 1px solid #DDD;
         }
+
+        p {
+            margin: 0;
+        }
     }
 
     tbody tr {
