--- a/assets/scss/_pygments.scss
+++ b/assets/scss/_pygments.scss
@@ -89,7 +89,7 @@
     
     .linenodiv pre {
         text-align: right;
-        padding-right: emCalc(6px);
+        padding-right: 7px;
         color: rgb(190, 190, 197);
     }
     
