Corrige l'alignement et le design des codes

--- a/assets/scss/_pygments.scss
+++ b/assets/scss/_pygments.scss
@@ -7,7 +7,6 @@
 .codehilite .hll { background-color: #ffffcc }
 .codehilite { background: #f8f8f8; }
 .codehilite .c { color: #408080; font-style: italic } /* Comment */
-.codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
 .codehilite .o { color: #666666 } /* Operator */
 .codehilite .cm { color: #408080; font-style: italic } /* Comment.Multiline */
@@ -74,6 +73,7 @@
     
     td {
         padding: 0;
+        vertical-align: top;
     }
     
     .linenos {
@@ -82,7 +82,7 @@
         width: 46px; /* Can handle up to 9999 lines of code without overflowing */
     }
     
-    .codehilite,
+    .codehilite pre,
     .linenos {
         padding-top: 15px;
         padding-bottom: 15px;
@@ -107,5 +107,15 @@
     .codehilite pre {
         white-space: pre; overflow: auto;
         overflow: auto;
+    }
+
+    .code pre {
+        overflow: auto;
+        word-wrap: normal;
+        padding-left: 7px;
+        
+        code {
+            white-space: pre;
+        }
     }
 }
