--- a/assets/scss/_pygments.scss
+++ b/assets/scss/_pygments.scss
@@ -113,9 +113,6 @@
         overflow: auto;
         word-wrap: normal;
         padding-left: 7px;
-        
-        code {
-            white-space: pre;
-        }
+        padding-right: 7px;
     }
 }
