Amelioration du sommaire des tutoriels

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -809,7 +809,7 @@
         }
     }
 
-    &.sommaire {
+    &.summary {
         h4 {
             border-bottom: 1px solid #d8dada;
             padding-bottom: 5px;
@@ -827,15 +827,15 @@
             margin-top: 0 !important;
             padding-top: 5px;
             margin-bottom: 5px;
-            background-color: #F4F6F6;
+            background-color: #FFF;
 
             ul {
                 margin-top: 5px;
                 padding-top: 5px;
                 padding-bottom: 5px;
-                margin-left: -25px;
+                margin-left: -42px;
                 width: calc(105% + 25px);
-                background: linear-gradient(top, rgba(0, 0, 0, .07), transparent 3px);
+                background: linear-gradient(top, rgba(0, 0, 0, .07), #F7F7F7 3px);
 
                 a {
                     padding-left: 50px;
