--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <script>
         WebFontConfig = {
             google: {
-              families: ['Source Sans Pro:400,700', 'Source Code Pro', 'Merriweather:400,700']
+              families: ['Source Sans Pro:400,700', 'Source Code Pro:400,700', 'Merriweather:400,700']
             }
         };
 
@@ -51,7 +51,7 @@
     </script>
     -->
     <!-- TEMP : load fonts from Google / Procude FOUT effect (see above) -->
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro|Merriweather:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro:400,700|Merriweather:400,700' rel='stylesheet' type='text/css'>
 
 
     {# for additionnal css in some pages #}
