--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -28,7 +28,7 @@
 
 
 {% block sidebar %}
-    <aside class="sidebar sommaire mobile-menu-hide">
+    <aside class="sidebar summary mobile-menu-hide">
         {% block sidebar_new %}{% endblock %}
 
         {% captureas sidebaractions %}
