--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -122,7 +122,7 @@
                     <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
 
                     {% csrf_token %}
-                    <button type="submit" name="leave" class="btn">Confirmer</button>
+                    <button type="submit" name="leave">Confirmer</button>
                 </form>
             </li>
         </ul>
