Issue #948 - Correction des pages statiques
Q | R
------------ | -------------
Correction de bugs ? | Non
Nouvelle fonctionnalité ? | Non
Tickets concernés | #948

J'ai corrigé quelques fautes présentes sur les pages statiques et
uniformisé l'utilisation des lettres capitales pour les CGU.

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -22,7 +22,7 @@
 
 {% block content %}
 	<p>
-        Si vous vous intéressez par tout celà, vous devriez songer à <a href="https://github.com/zestedesavoir/zds-site">contribuer au développement du site</a> !
+        Si vous vous intéressez par tout cela, vous devriez songer à <a href="https://github.com/zestedesavoir/zds-site">contribuer au développement du site</a> !
     </p>
 
     <div>
