--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -49,7 +49,7 @@
     <h3>L'équipe technique</h3>
     <p>
         L'équipe technique est constituée de certains membres du site dont le but est d'une part de s'assurer que le site reste toujours disponible en ligne, et d'autre part de corriger les bogues rencontrés sur le site.
-        Des administrateurs systèmes, jusqu'aux designeurs, en passant par les developpeurs back-end et intégrateurs front-end, ils s'occupent aussi de la maintenance du <a href="https://github.com/zestedesavoir/zds-site">dépôt officiel du projet</a>. Les membres faisant partie de l'équipe technique sont les suivants :
+        Des administrateurs systèmes, jusqu'aux designeurs, en passant par les développeurs back-end et intégrateurs front-end, ils s'occupent aussi de la maintenance du <a href="https://github.com/zestedesavoir/zds-site">dépôt officiel du projet</a>. Les membres faisant partie de l'équipe technique sont les suivants :
     </p>
     <div class="authors">
         <ul>
