--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -3,19 +3,19 @@
 
 
 {% block title %}
-    Conditions Générales d'Utilisations
+    Conditions générales d'utilisation
 {% endblock %}
 
 
 
 {% block breadcrumb %}
-    <li>Conditions Générales d'Utilisation</li>
+    <li>Conditions générales d'utilisation</li>
 {% endblock %}
 
 
 
 {% block headline %}
-    <h2>Conditions Générales d'Utilisation</h2>
+    <h2>Conditions générales d'utilisation</h2>
 {% endblock %}
 
 
@@ -105,7 +105,7 @@
 
     <h4>5.2 Responsabilité du contenu publié par un membre et sanctions en cas de manquement</h4>
     <p>
-        Les membres sont seuls responsables du contenu qu'ils publient. L'éditeur du site ne peut être considéré comme responsable du contenu transmis ou mis en ligne par les membres. Toutefois,  les utilisateurs peuvent signaler une publication manifestement contraire aux lois en vigueur, aux règles du site ou aux Conditions Générales d'Utilisation  dans le but d'un acte de modération par l'équipe du site.
+        Les membres sont seuls responsables du contenu qu'ils publient. L'éditeur du site ne peut être considéré comme responsable du contenu transmis ou mis en ligne par les membres. Toutefois,  les utilisateurs peuvent signaler une publication manifestement contraire aux lois en vigueur, aux règles du site ou aux conditions générales d'utilisation  dans le but d'un acte de modération par l'équipe du site.
     </p>
     <p>
         En cas de manquement par un membre des règles du site et/ou des éléments ci-dessus, la modération de zestedesavoir.com peut décider de lui bloquer l'accès au site, à titre provisoire ou définitif, ou d'en limiter l'utilisation. Les différentes sanctions applicables sont inscrites dans le règlement du site. Aucune contrepartie ne pourra être exigée.
@@ -276,7 +276,7 @@
 
     <h3>11. Durée</h3>
     <p>
-        La durée des présentes Conditions Générales d'Utilisation est indéterminée.
+        La durée des présentes conditions générales d'utilisation est indéterminée.
     </p>
 
     <h3>12. Droit applicable et juridiction compétente</h3>
