--- a/templates/article/includes/sidebar_actions.part.html
+++ b/templates/article/includes/sidebar_actions.part.html
@@ -12,7 +12,7 @@
                 </a>
                 <form action="{% url "zds.article.views.modify" %}" method="post" class="modal modal-small" id="add-author">
                     {% csrf_token %}
-                    <input type="text" name="author" placeholder="Pseudo de l'utilisateur à ajouter">
+                    <input type="text" name="author" placeholder="Pseudo de l'utilisateur à ajouter" data-autocomplete="{ 'type': 'single' }" >
                     <input type="hidden" name="article" value="{{ article.pk }}" />
                     <button type="submit" class="button" name="add_author">
                         Confirmer
