Positionnement du dropdown

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -2243,6 +2243,7 @@ form.topic-message {
 
     .autocomplete-dropdown {
         position: absolute;
+        z-index: 60;
         
         ul {
             padding: 0;
